fix: :skull: eliminate layout shifting in header for phones & tablet

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -161,12 +161,11 @@
       0 0 50px theme('colors.indigo.300');
   }
 
-  .hero-image {
-    @apply shadow-lg transition-all lg:hidden;
+  .clip-header-image {
     clip-path: polygon(0 0, 100% 0, 100% 82%, 0% 100%);
   }
 
-  .hero-image-desktop img {
+  .hero-img-desktop img {
     @apply w-80 h-80 xl:w-96 xl:h-96 ml-10 xl:ml-16 rounded-full shadow-lg transition-all hidden lg:block transform transform-gpu hover:rotate-3;
   }
 }
